--- a/src/blocks/form/form-input-message-error-activ.css
+++ b/src/blocks/form/form-input-message-error-activ.css
@@ -1,14 +1,14 @@
-.form-input-message-error-activ {
+.form-input-message-error-active {
   visibility: visible;
   min-height: 30px;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.2;
-  /* color: red; */
+  color: red;
   margin-bottom: 13px;
 }
 
-.form-input-message-error-activ + .form__error-conteiner span {
+.form-input-message-error-active + .form__error-conteiner span {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -19,7 +19,7 @@
 }
 
 @media all and (max-width: 440px) {
-  .form-input-message-error-activ {
+  .form-input-message-error-active {
     margin: 5px 22px 5px 22px;
   }
 }
