--- a/src/blocks/popup/__button-submit/popup__button_invalid.css
+++ b/src/blocks/popup/__button-submit/popup__button_invalid.css
@@ -1,7 +1,14 @@
 .popup__button_invalid {
-    color: #C4C4C4;
-    background-color: white;
-    pointer-events: none;
-    border: 1px solid black;
-    opacity: .3;
+  border: 1px solid black;
+  padding: 14px 125px;
+  margin-top: 47px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #c4c4c4;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: none;
+  opacity: 0.3;
 }
