--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,9 +1,9 @@
 .page {
-    padding: 0;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    font-family: 'Inter', 'Tahoma', sans-serif;
-    text-rendering: optimizeLegibility;
-  }
+  padding: 0;
+  margin: 0 auto;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #000;
+  font-family: 'Inter', 'Tahoma', sans-serif;
+  text-rendering: optimizeLegibility;
+}
