--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url(./vendor/normalize.css);
 
 /* fonts */
-@import url(./fonts/fonts.css);
+@import url(./vendor/fonts.css);
 
 /* page */
 @import url(./blocks/page/page.css);
